--- a/style.css
+++ b/style.css
@@ -138,13 +138,13 @@ li {
     border-radius: 15px;  
 }
 
-input{
+.inputindex{
     background-color: rgba(30, 122, 138, 0.743);
     color: rgba(41, 238, 129, 0.788);
     float: right;
 }
 
-input:hover {
+.inputindex:hover {
     text-emphasis-color: rgba(23, 162, 57, 0.54);
     box-shadow: rgb(150, 127, 24) 0px 1px 4px, rgb(161, 136, 21) 0px 0px 0px 3px;
     box-shadow: rgb(161, 136, 21) 0px -23px 25px 0px inset, rgba(161, 136, 21) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
@@ -161,3 +161,56 @@ input:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: none;
 }
+
+h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: inherit;
+    color: linear-gradient(to bottom, rgba(35, 108, 36, 0.676), rgb(38, 90, 38));
+    width: auto;
+    height: auto;
+    
+    background: linear-gradient(to bottom, rgba(7, 8, 5, 0.676), rgb(113, 201, 12));
+    box-shadow: rgb(233, 37, 37) 0px 1px 4px, rgb(141, 46, 46) 0px 0px 0px 3px;
+    border-radius: 18px;
+
+}
+
+#loginForm{
+    width: auto;
+    height: 400px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+label{
+font-family: Georgia, 'Times New Roman', Times, serif;
+color: rgb(37, 37, 37);
+}
+#email{
+    background: linear-gradient(to bottom, rgba(117, 109, 109, 0.676), rgb(175, 146, 67));
+    box-shadow: rgb(196, 196, 196) 0px 1px 4px, rgb(53, 95, 14) 0px 0px 0px 3px;
+    border-radius: 8px;;
+}
+
+#senha{
+    background: linear-gradient(to bottom, rgba(117, 109, 109, 0.676), rgb(175, 146, 67));
+    box-shadow: rgb(196, 196, 196) 0px 1px 4px, rgb(53, 95, 14) 0px 0px 0px 3px;
+    border-radius: 8px;
+
+}
+
+#carrinho{
+    width: 40px;
+    height: 45px;
+
+}
+
+#carrinhocaixa{
+    width: auto;
+    height: 350px;
+    border: 2px solid black;
+    display: none;
+    background: linear-gradient(to bottom, rgb(87, 19, 19)), rgb(rgb(53, 47, 30));
+    box-shadow: rgb(94, 81, 9) 0px 1px 4px, rgb(85, 92, 24) 0px 0px 0px 3px;
+    border-radius: 8px;
+}
+
